<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/ascendingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_ascending_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:layout_marginStart="8dp"
        android:id="@+id/descendingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_descending_button"
        app:layout_constraintLeft_toRightOf="@id/ascendingButton"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/colorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_color_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ascendingButton" />

    <RadioButton
        android:layout_marginStart="8dp"
        android:id="@+id/titleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_title_button"
        app:layout_constraintStart_toEndOf="@id/colorButton"
        app:layout_constraintTop_toBottomOf="@id/ascendingButton"  />

    <RadioButton
        android:layout_marginStart="8dp"
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_date_button"
        app:layout_constraintStart_toEndOf="@id/titleButton"
        app:layout_constraintTop_toBottomOf="@id/ascendingButton"  />


</androidx.constraintlayout.widget.ConstraintLayout>